--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.3
 Django==3.1.2
 django-bootstrap4==2.3.0
 django-crispy-forms==1.9.2
+django-debug-toolbar==3.2
 django-environ==0.4.5
 mysqlclient==2.0.1
 pytz==2020.1
